@@ -1,3 +1,3 @@
-DOS2UNIX_VERSION = 5.3.1-beta1
-DOS2UNIX_VERSION_SHORT = 53b1
-DOS2UNIX_DATE = 2011-06-16
+DOS2UNIX_VERSION = 5.3.1-beta2
+DOS2UNIX_VERSION_SHORT = 531b2
+DOS2UNIX_DATE = 2011-06-24
