@@ -1,3 +1,9 @@
+2011-06-24 Erwin Waterlander <waterlan@xs4all.nl>
+	* bugfix: dos2unix changes ownership and permissions on file.
+	  When an other user (e.g. root) than the owner has write permission
+	  on the input file, dos2unix changes owner and group in old
+	  file mode. Thanks to Christopher Williams.
+
 2011-06-16 Erwin Waterlander <waterlan@xs4all.nl>
 	* Identical functions from dos2unix.c and unix2dos.c
 	  are moved to common.c.
